# RsaCtfTool

./: .RsaCtfTool.py.swp  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ContinuedFractions.py  Dockerfile  Dockerfile_full  INSTALL.sh  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  RsaCtfTool.py  Security.md  TESTS.md  boneh_durfee.sage  dlp.pub  ecm.sage  example_cipher  example_pub.pem  fermat.py  londahl.py  optional-requirements.txt  p_1.py  partial_q.py  pastctfprimes.txt  path.py  primefac.py  pyproject.toml  qicheng.sage  requirements.txt  rsalibnum.py  setup.cfg  setup.py  siqs.py  smallfraction.sage  test.sh  wiener_attack.py
.github/workflows/: codeql.yml  ghcrio_publish.yml  lint_python.yml  pypi-publish.yml  test.yml
RsaCtfTool/: RsaCtfTool.py  fermat.py  main.py  primefac.py  qicheng.sage  siqs.py  test.sh
RsaCtfTool/_primefac/: _arith.py  _prime.py
RsaCtfTool/data/: ea229f977fb51000.pkl.bz2  fbcc4333b5f183fc.pkl.bz2
RsaCtfTool/examples/: SQUFOF.pub  cipher1  close_primes.cipher  common_factor.cipher  commonfactor10.pub  commonfactor5.pub  commonfactor7.pub  commonfactor8.pub  conspicuous.priv  factordb_parse.pub  fermat_numbers_gcd.pub  hastads01.pub  partial_d.pem  siqs.pub  small_q.pub  weak_public.pub
RsaCtfTool/lib/: algos.py  conspicuous_check.py  system_primes.py
RsaCtfTool/sage/: ecm.sage
_primefac/: __init__.py  _arith.py  _prime.py  _util.py
_primefac/_factor_algo/: _ecm.py  _factordb.py  _fermat.py  _mpqs.py  _pollard_pm1.py  _pollard_rho_brent.py  _williams_pp1.py
attacks/: abstract_attack.py
attacks/multi_keys/: common_factors.py  common_modulus.py  common_modulus_related_message.py  commonfactors.py  commonmodulus.py  hastads.py  same_n_huge_e.py
attacks/single_key/: SQUFOF.py  XYXZ.py  binary_polinomial_factoring.py  boneh_durfee.py  brent.py  carmichael.py  classical_shor.py  cm_factor.py  comfact_cn.py  compositorial_pm1_gcd.py  cube_root.py  dixon.py  ecm.py  ecm2.py  euler.py  factor_2PN.py  factordb.py  factorial_pm1_gcd.py  fermat.py  fermat_numbers_gcd.py  fibonacci_gcd.py  hart.py  (+35 more)
data/: pastctfprimes.txt  ti_rsa_signing_keys.txt
docs/: failure_modes.md
examples/: c3301_1.pub  c3301_2.pub  cipher2  cipher3  close_primes.pub  cm_factor.pub  common_factor.pub  common_modulus1.cipher  common_modulus1.pub  common_modulus2.cipher  common_modulus2.pub  commonfactor1.pub  commonfactor12.pub  commonfactor2.pub  commonfactor4.pub  commonfactor6.pub  commonfactor9.pub  dixon.pub  ecm_method.pub  elite_primes.pub  factor_2PN.pub  factordb_parse.pub  fermat.pub  fibonacci_gcd.pub  hastads02.pub  hastads03.pub  masked.pem  mersenne_pm1_gcd.pub  multikey-0.pub  multikey-1.pub  neca.pub  pastctfprimes.pub  pollard_rho.pub  primefac.pub  primorial_pm1_gcd.pub  roca.pub  small_crt_exp.pub  small_exponent.cipher  small_exponent.pem  small_q.cipher  (+6 more)
lib/: algos.py  conspicuous_check.py  crypto_wrapper.py  customlogger.py  exceptions.py  external.py  fdb.py  idrsa_pub_disector.py  is_roca_test.py  keys_wrapper.py  nsif.hs  number_theory.py  pickling.py  rsa_attack.py  rsalibnum.py  system_primes.py  timeout.py  utils.py
sage/: binary_polinomial_factoring.sage  boneh_durfee.sage  cm_factor.sage  ecm2.sage  lattice.sage  partial_d.sage  qicheng.sage  qs.sage  roca_attack.py  sage_functions.py  small_crt_exp.sage  smallfraction.sage
scripts/: release.sh
test/: test.sh
tests/: conftest.py  test_algos.py  test_attacks.py  test_exceptions.py  test_keys_wrapper.py  test_number_theory.py  test_pubkey_decode.py  test_regression.py  test_utils.py
(+171 files in other folders)
