[tool.poetry]
name = "rsactftool"
version = "1.0"
description = "RSA attack tool (mainly for ctf) - retreive private key from weak public key and/or uncipher data"
license = "Beerware"
authors = ["Ganapati <@G4N4P4T1>"]
maintainers = ["borari <@borari>"]
readme = "README.md"
repository = "https://github.com/borari/RsaCtfTool"
keywords = [
    "rsa-attack",
    "rsa",
    "cryptography",
]
classifiers = [
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [
    { include = "rsactftool", from = "src" },
    { include = "lib", from = "src/rsactftool" },
    { include = "attacks", from = "src/rsactftool" },
]

[tool.poetry.dependencies]
python = "==3.8"
six = "1.11.0"
sympy = "1.3"
cryptography = "2.8"
urllib3 = "1.24.2"
requests = "2.20.0"
gmpy = "1.17"
gmpy2 = "2.0.8"
pycryptodome = "3.9.7"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
rsactftool = "rsactftool.RsaCtfTool:main"

[tool.poetry.extras]
sagemath = ["sagemath"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
